# OpenSpeakerBeam-SS

./: .gitignore  README.md  analyze_loss.py  create_absent_target_data.py  create_low_sir_data.py  create_mixture_data_and_csv.py  create_partial_overlap_data.py  create_sample_001_finetune_data.py  inference.py  requirements.txt  train.py
model/: __init__.py  incremental_streaming.py  s4d.py  streaming.py
onnx-runtime/: Cargo.toml  DESIGN.md  README.md
onnx-runtime/crates/speakerbeam-cli/: Cargo.toml
onnx-runtime/crates/speakerbeam-cli/src/: main.rs
onnx-runtime/crates/speakerbeam-core/: Cargo.toml
onnx-runtime/crates/speakerbeam-core/src/: audio.rs  chunk_buffer.rs  config.rs  embedding.rs  lib.rs
onnx-runtime/crates/speakerbeam-onnx/: Cargo.toml
onnx-runtime/crates/speakerbeam-onnx/benches/: decoder_bench.rs  separator_bench.rs
onnx-runtime/crates/speakerbeam-onnx/src/: ecapa_session.rs  incremental_streaming_session.rs  lib.rs  onnx_util.rs  session.rs  streaming_session.rs
onnx-runtime/crates/speakerbeam-onnx/src/native/: decoder.rs  mod.rs  ops.rs  separator.rs  weights.rs
onnx-runtime/crates/speakerbeam-onnx/tests/: native_decoder_parity.rs  native_separator_incremental_parity.rs  native_separator_parity.rs  native_separator_streaming_parity.rs
onnx-runtime/export/: README.md  compute_ecapa_features.py  export_ecapa.py  export_speakerbeam.py  export_streaming_models.py  export_streaming_weights.py  extract_embedding.py  onnx_utils.py  requirements.txt  verify_ecapa_onnx.py  verify_incremental_streaming.py  verify_native_separator.py  verify_onnx.py  verify_real_audio.py  verify_streaming.py  verify_streaming_onnx.py
onnx-runtime/models/: ecapa_fbank.npz  embedding_000001.npy
onnx-runtime/models/sep_ref/: block0_conv.npz  decoder_ref.npz  step1.npz
onnx-runtime/tests/: README.md
tools/: __init__.py
